<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="oneGame"
            type="com.example.sunuludo.models.Game" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg3"
        android:padding="16dp"
        tools:context=".views.OfflineActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/start_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/number_player_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_de_joueur"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <RadioGroup
                    android:id="@+id/number_player_radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/number_player_textView">

                    <RadioButton
                        android:id="@+id/number_player_2_radioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/number_player_3_radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_3" />

                    <RadioButton
                        android:id="@+id/number_player_4_radioButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_4" />
                </RadioGroup>

                <ImageView
                    android:id="@+id/chip_green_imageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_chips_check_green"
                    app:layout_constraintBottom_toBottomOf="@id/player_name_green_outlinedTextField"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/player_name_green_outlinedTextField"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/player_name_green_outlinedTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/joueur_1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/chip_green_imageView"
                    app:layout_constraintTop_toBottomOf="@id/number_player_radioGroup">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{oneGame.playerGreen}" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/chip_yellow_imageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_chips_check_yellow"
                    app:layout_constraintBottom_toBottomOf="@id/player_name_yellow_outlinedTextField"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/player_name_yellow_outlinedTextField"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/player_name_yellow_outlinedTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/joueur_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/chip_yellow_imageView"
                    app:layout_constraintTop_toBottomOf="@id/player_name_green_outlinedTextField">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{oneGame.playerYellow}" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/chip_red_imageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_chips_check_red"
                    app:layout_constraintBottom_toBottomOf="@id/player_name_red_outlinedTextField"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/player_name_red_outlinedTextField"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/player_name_red_outlinedTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/joueur_3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/chip_red_imageView"
                    app:layout_constraintTop_toBottomOf="@id/player_name_yellow_outlinedTextField">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{oneGame.playerRed}" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageView
                    android:id="@+id/chip_blue_imageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_chips_check_blue"
                    app:layout_constraintBottom_toBottomOf="@id/player_name_blue_outlinedTextField"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/player_name_blue_outlinedTextField"
                    tools:ignore="ContentDescription" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/player_name_blue_outlinedTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:hint="@string/joueur_4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/chip_blue_imageView"
                    app:layout_constraintTop_toBottomOf="@id/player_name_red_outlinedTextField">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@{oneGame.playerBlue}" />

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/start_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/jouer"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>